<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name"> </string>
    <string name="txt_all_lists">All Lists</string>
    <string name="menu_task_lists">Task Lists</string>
    <string name="search_bar">Search_Bar</string>
    <string name="add_bth_md">Add in Batch Mode</string>
    <string name="ad_rmv">Remove Add</string>
    <string name="more_app">More Apps</string>
    <string name="Sd_fb">send feedback</string>
    <string name="fw_us">Follow Us</string>
    <string name="invite">Invite friend to the app</string>
    <string name="setting">Setting</string>
    <string name="Nt_to_do">Nothing to do</string>
    <string name="spinner_image">Spinner_image</string>
    <string name="Add_dialog_Title">New List</string>
    <string name="dialog_editText">Enter List Name</string>
    <string name="add_in_dialog">ADD</string>
    <string name="cancel_dialog" tools:ignore="ButtonCase">CANCEL</string>
</resources>