<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#fff">
    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:background="#fff"
        android:layout_height="wrap_content"
        android:text="@string/Add_dialog_Title"
        android:textColor="@color/purple_700"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_20sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Dialog_EditText"
        android:layout_width="@dimen/_270sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:hint="@string/dialog_editText"
        android:textColor="@color/purple_700"
        android:textColorHint="#757575"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_title"
        android:autofillHints="name"
        android:inputType="textPersonName"
        android:layout_marginTop="@dimen/_20sdp"/>


    <TextView
        android:id="@+id/add_txt_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_in_dialog"
        android:background="#fff"
        android:textColor="@color/purple_700"
        android:textStyle="bold"
       app:layout_constraintTop_toBottomOf="@+id/Dialog_EditText"
        android:layout_marginTop="@dimen/_40sdp"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingBottom="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"/>
    <TextView
        android:id="@+id/cancel_txt_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_dialog"
        android:background="#fff"
        android:textColor="@color/purple_700"
        android:textStyle="bold"
       app:layout_constraintTop_toBottomOf="@+id/Dialog_EditText"
        app:layout_constraintEnd_toStartOf="@+id/add_txt_dialog"
        android:layout_marginTop="@dimen/_40sdp"
        android:paddingBottom="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"/>










</androidx.constraintlayout.widget.ConstraintLayout>